# tuidal

./: Cargo.toml
src/: audio.rs  main.rs  play.rs  player.rs
src/backend/: audio.rs  mod.rs  player.rs
src/frontend/: elements.rs  item.rs  mod.rs
