[package]
name = "tidalcli"
version = "0.1.0"
edition = "2024"

[dependencies]
clearscreen = "4.0.2"
serde = "1.0.219"
serde_json = "1.0.140"
shell-words = "1.1.0"
tidal = { path = "../tidal-rs" }
tokio = { version = "1.46.1", features = ["full"] }

reqwest = { version = "0.11", features = ["blocking"] }
# rodio = "0.17"
rodio = "0.21"
