[package]
name = "tuidal"
version = "0.1.0"
edition = "2024"

[dependencies]
clearscreen = "4.0.2"
serde = "1.0.219"
serde_json = "1.0.140"
shell-words = "1.1.0"
# tidal = { git = "https://github.com/BrunoWallner/tidal-rs"  }
tidal = { path = "../tidal-rs" }
tokio = { version = "1.46.1", features = ["full"] }
rodio = "0.21"
cpal = "0.16.0"
colored = "3.0.0"
ratatui = "0.29.0"
